add list submissions endpoint
